<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frostox.calculo.activities.Activate"
    tools:showIn="@layout/activity_activate">




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/productKey"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/ask_register_msg"
        android:singleLine="true"
        android:gravity="center"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/activate"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:id="@+id/activate"
        android:layout_below="@+id/productKey"
        android:layout_centerHorizontal="true"
       android:background="@drawable/corner"
        android:layout_marginTop="40dp"
        android:onClick="onActivate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/tvAcc"
        android:text="@string/active_acc"
        android:layout_alignBaseline="@+id/activate"
        android:layout_alignBottom="@+id/activate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        />

</RelativeLayout>
