<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.frostox.calculo.activities">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/FnameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/Fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName|textCapWords"
             />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LnameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/Lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName|textCapWords"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regPassTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/regPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
           />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confPassTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/confPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
          />
    </android.support.design.widget.TextInputLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <Button
       android:layout_alignParentTop="true"
        android:layout_width="350dp"
        android:layout_centerInParent="true"
        android:layout_height="40dp"
        android:text="REGISTER"
        android:id="@+id/register"
        android:layout_below="@+id/passwordWrapper"
        android:layout_marginTop="25dp"
        android:background="@drawable/corner"
        android:textColor="#fff"
        android:textSize="17sp"
        />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/passwordWrapper"
        android:layout_marginTop="25dp"
        android:elevation="4dp"
        android:textColor="#fff"
        android:textSize="18dp"

        />
</RelativeLayout>
</LinearLayout>
