<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frostox.calculo.activities.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/bg">


    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/student" />


    <TextView
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/smallTitle"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subtitle"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="By"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="LearningLinks Science Tutors Llp"
        android:id="@+id/textView5"
      android:layout_above="@+id/button"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
       />


    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner"
        android:id="@+id/button"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goLogin"/>


</RelativeLayout>
